refactor: update user profile and lyrics handling; enhance JSON serialization with Gson annotations